--- a/Test.html
+++ b/Test.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test Deploy</title>
-<script type="text/javascript">
-function open(){
-alert('clicked');
-}</script>
-<link rel="stylesheet" href="style.css" />
+    <title>Test Deploy</title>
+    <link rel="stylesheet" href="style.css" />
+    <script type="text/javascript">
+    function open1() {
+        alert('clicked');
+    }
+    </script>
 </head>
 <body>
-	<h1> This is a samle deploy to GitHub Pages!</h1>
-	<button onclick="open()">Click Me!</button>
+    <h1> This is a samle deploy to GitHub Pages!</h1>
+    <button type="button" onclick="open1();">Click Me!</button>
 </body>
 </html>
